[package]
name = "lucet-module-data"
version = "0.1.1"
description = "A structured interface for Lucet module data and metadata"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
cranelift-codegen = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "~1.0.1"
num-derive = "0.2"
num-traits = "0.2"
object = ">=0.13"
byteorder = "1.3"
