[package]
name = "lucetc"
version = "0.1.1"
description = "Fastly's WebAssembly to native code compiler"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "lucetc"
path = "src/main.rs"

[dependencies]
bincode = "~1.0.1"
cranelift-codegen = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-entity = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-native = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-frontend = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-module = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-faerie = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
cranelift-wasm = { git="https://github.com/CraneStation/Cranelift", rev="72b97fcb398537c6bb3ab73c45c428652321cbb6" }
target-lexicon = "0.3"
lucet-module-data = { path = "../lucet-module-data", version = "0.1.1" }
wasmparser = "0.23"
clap="2.32"
log = "0.4"
env_logger = "0.6"
faerie = "0.10.0"
failure = "0.1"
byteorder = "1.2"
wasmonkey = { path = "../lucet-builtins/wasmonkey", version = "0.1.7" }
wabt = "0.7"
tempfile = "3.0"
bimap = "0.2"
human-size = "0.4"
parity-wasm = "0.38"
minisign = "0.5.11"
